# granc

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release-binaries.yml
echo-service/: Cargo.toml  build.rs
echo-service/proto/: echo.proto
echo-service/src/: lib.rs
examples/docs/: index.md  library.domain.md  library.md  library.rpc.md
grab/: CHANGELOG.md  Cargo.toml  README.md
grab/src/: client.rs  codec.rs  descriptor.rs  main.rs
grab/src/client/: integration_test.rs
grab/src/client/integration_test/: echo_service_impl.rs
granc/: CHANGELOG.md  Cargo.toml
granc-core/: Cargo.toml  README.md
granc-core/proto/: reflection.proto
granc-core/src/: client.rs  grpc.rs  lib.rs  reflection.rs
granc-core/src/client/: offline.rs  online.rs  online_without_reflection.rs  types.rs  with_file_descriptor.rs  with_server_reflection.rs
granc-core/src/grpc/: client.rs  codec.rs
granc-core/src/reflection/: client.rs  generated.rs
granc-core/tests/: dummy_echo_service_impl.rs  echo_service_impl.rs  granc_client_file_descriptor_test.rs  granc_client_online_test.rs  granc_client_online_without_reflection_test.rs  granc_client_reflection_test.rs  granc_client_test.rs  reflection_client_test.rs
granc-tui/: Cargo.toml
granc-tui/src/: config.rs  effects.rs  globals.rs  main.rs  model.rs  msg.rs  update.rs  view.rs
granc/src/: cli.rs  core.rs  docgen.rs  docs.rs  formatter.rs  main.rs
granc/src/core/: client.rs
granc/src/core/client/: integration_test.rs
granc/src/core/reflection/: client.rs
granc/src/core/reflection/client/: integration_test.rs
granc/src/docgen/: markdown.rs  package.rs
granc/src/reflection/: remote.rs
src/: client.rs  descriptor.rs  main.rs
