[package]
authors = ["Victor Martínez Montané <jaster.victor@gmail.com>"]
categories = ["network-programming", "command-line-utilities"]
description = "A dynamic gRPC CLI tool written in Rust (gRPC + Crab)"
edition = "2024"
homepage = "https://github.com/JasterV/grab"
keywords = ["cli", "command-line", "grpc", "grpcurl", "curl"]
license = "MIT OR Apache-2.0"
name = "grab"
publish = true
readme = "README.md"
repository = "https://github.com/JasterV/grab"
rust-version = "1.89"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
http = "1.4.0"
http-body = "1.0.1"
prost = "0.14.3"
prost-reflect = { version = "0.16.3", features = ["serde"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tonic = "0.14.2"

[dev-dependencies]
echo-service = { path = "../echo-service" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
