[package]
name = "granc-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core Logic
granc_core = { path = "../granc-core" }

# Architecture
teatui = "0.1"
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"

# Async Runtime
tokio = { version = "1.43", features = ["full"] }

# Data & Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"

# Error Handling
color-eyre = "0.6"
anyhow = "1.0"
