[package]
authors = { workspace = true }
categories = ["network-programming", "command-line-utilities"]
description = "A dynamic gRPC CLI tool written in Rust (gRPC + Cranc, Crab in Catalan)"
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["cli", "command-line", "grpc", "grpcurl", "curl"]
license = { workspace = true }
name = "granc"
publish = true
readme = "../README.md"
repository = { workspace = true }
rust-version = { workspace = true }
version = "0.7.2"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "{ name }-{ target }/{ bin }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
granc_core = "0.6.1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
granc-test-support = { path = "../granc-test-support" }
